--- a/prisma-node/package.json
+++ b/prisma-node/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.3.0",
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "prisma": "^3.3.0"
